--- a/cs_design_projects.css
+++ b/cs_design_projects.css
@@ -9,9 +9,9 @@ body {
 @font-face {
     font-family: "Historia Sky";
     src:
-      url("./historia_sky/HistoriaSky.woff2") format("woff2"),
-      url("./historia_sky/HistoriaSky.woff") format("woff"),
-      url("./historia_sky/HistoriaSky.ttf") format("truetype");
+      url("historia_sky/HistoriaSky.woff2") format("woff2"),
+      url("historia_sky/HistoriaSky.woff") format("woff"),
+      url("historia_sky/Historia_Sky.ttf") format("truetype");
     font-display: swap;
   }
 * {
